--- a/style.css
+++ b/style.css
@@ -4,13 +4,18 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body{
+    background-color: gray;
+}
 
 .page {
-    position: relative;
+    height: 500px;
     width: 680px;
-    height: 470px;
-    border: 1px solid black;
-    background-color: #FFFFFF;
+    margin: 40px auto;  
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 0px 5px #00000079;
     
 }
 
